Fix .prominent wrong font family

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -190,9 +190,9 @@ p {
 }
 
 .prominent {
-  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui,
-    helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial,
-    sans-serif;
+  font-family: "Hubot Sans", "Mona Sans", -apple-system, BlinkMacSystemFont,
+    avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu,
+    roboto, noto, arial, sans-serif;
   font-stretch: expanded;
   font-weight: bolder;
   a {
